  |              point the client is assumed to be stable. Code that
  |              would make clients incompatible with previous clients or
  |              proxies will be a accompanied by 'client contest' change.
  `------------- Denotes a client rewrite.

==========================================================================
Version change log: $Id: CHANGES.txt,v 1.14.2.42 2004/01/07 02:50:50 piru Exp $
==========================================================================

2.9000
------
2.9008-487  all: OGR-24 phase 2
            fix: amigaos: 68k: fixed a race condition adding public port
            fix: amigaos: fixed a race quitting the cruncher thread
            new: MorphOS port

2.9007-486  imp: nextstep: include assembler cores on x86
            imp: nextstep: fix console handling for config menu
            fix: macosx: no longer reference _kIOMasterPortDefault (#3338)
            fix: macosx: fix temperature monitoring (#3343)
            new: macosx: use IOHWSensor to read CPU temperature (#3334)
            imp: some: allow for fractional temperature thresholds (#3315)
            chg: x86: made Pentium M preselection like Pentium 4 (#3323)
            imp: aix: include assembler cores on ppc
            fix: aix: smp: threads now get correctly spread over all cpus
            chg: macosx: KKS 970 core temporarily disabled (useless)

2.9006-485  new: decunix: cpu temperature detection
            new: macosx: use AppleCPUthermo to read CPU temperature (#3315)
            imp: macosx: use latest gcc 3.3 to compile client and OGR cores
            new: macosx: properly recongize the PowerPC 970 (G5) (#3310)
            new: ppc: new rc5-72 core for PowerPC 970 (G5) by Didier Levet
            new: nextstep: revived port with OGR and RC5-72 support

2.9005-484  new: x86: detect Athlon with Barton core (#3227)
            new: x86: detect Celeron with Tualatin core / brand id 1 (#3246)
            new: x86: detect Pentium M (#3304)